--- a/composes/mongo.yml
+++ b/composes/mongo.yml
@@ -6,4 +6,4 @@ services:
     - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: $MONGO_INITDB_ROOT_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $M<ONGO_INITDB_ROOT_PASSWORD
+      MONGO_INITDB_ROOT_PASSWORD: $MONGO_INITDB_ROOT_PASSWORD
